--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -40,6 +40,7 @@ template {
   display: none;
 }
 a {
+  color: #ff85e9;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
@@ -200,7 +201,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: system-ui, sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -218,7 +219,7 @@ img {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  /* margin-bottom: 1.45rem; */
 }
 h1 {
   margin-left: 0;
